# synthea-pydantic

./: .gitignore  README.md  pyproject.toml
synthea_pydantic/: __init__.py  allergies.py  base.py  careplans.py  claims.py  claims_transactions.py  conditions.py  devices.py  encounters.py  imaging_studies.py  immunizations.py  medications.py  observations.py  organizations.py  patients.py  payer_transitions.py  payers.py  procedures.py  providers.py  supplies.py
tests/: conftest.py  test_allergies.py  test_careplans.py  test_claims.py  test_claims_transactions.py  test_conditions.py  test_devices.py  test_encounters.py  test_generic_models.py  test_imaging_studies.py  test_immunizations.py  test_medications.py  test_observations.py  test_organizations.py  test_patients.py  test_payer_transitions.py  test_payers.py  test_procedures.py  test_providers.py  test_supplies.py
tests/data/: README.txt
