[project]
name = "synthea-pydantic"
version = "0.1.0"
description = "Lightweight pydantic wrappers for Synthea CSV format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
