[project]
name = "synthea-pydantic"
version = "0.1.1"
description = "Type-safe Pydantic models for Synthea health data CSV exports"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["synthea", "healthcare", "pydantic", "csv", "synthetic-data", "health-data"]

dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
